Fix widget visibility

--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -632,6 +632,17 @@ Mixins
 		}
 	}
 	/*--------------------------------------------------------------
+	Widgets
+	--------------------------------------------------------------*/
+	&-widget {
+		&--listing-filter,
+		&--vendor-filter {
+			@media only screen and (max-width: 47.99em) {
+				display:none;
+			}
+		}
+	}
+	/*--------------------------------------------------------------
 	Listings
 	--------------------------------------------------------------*/
 	&-listing {
